# s3multipart

./: .pylintrc  LICENSE.md  README.md  pyproject.toml
s3multipart/: __init__.py  cli.py
