[tool.poetry]
name = "s3multipart"
version = "0.1.0"
description = ""
authors = ["davido-bs <david.oliver@strategic-i.com>"]

[tool.poetry.dependencies]
python = "^3.6"
boto3 = "^1.9"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.3"
ipdb = "^0.12.0"

[tool.poetry.scripts]
s3multipart = "s3multipart.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
